**_TESTING THE API SERVICES WITH CIRCUIT BREAKER_** HTTP

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,5 @@ include 'config-server'
 include 'discovery-server'
 include 'z-dummy-api-alpha'
 include 'z-dummy-api-beta'
+include 'z-dummy-api-composite'
 
