--- a/config-server/build.gradle
+++ b/config-server/build.gradle
@@ -30,15 +30,22 @@ dependencyManagement {
 }
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter")
-    compile("org.springframework.boot:spring-boot-starter-actuator") {
-        exclude module: "spring-boot-starter-logging"
-    }
-    compile('org.springframework.boot:spring-boot-starter-web')
+//    compile("org.springframework.boot:spring-boot-starter")
+//    compile("org.springframework.boot:spring-boot-starter-actuator") {
+//        exclude module: "spring-boot-starter-logging"
+//    }
+//    compile('org.springframework.boot:spring-boot-starter-web')
+//
+//    compile 'org.springframework.cloud:spring-cloud-config-server'
 
-    compile 'org.springframework.cloud:spring-cloud-config-server'
 
+    compile('org.springframework.boot:spring-boot-starter-actuator')
+//    compile('org.springframework.cloud:spring-cloud-starter-bus-amqp')
+    compile('org.springframework.cloud:spring-cloud-config-server')
+//    compile('org.springframework.cloud:spring-cloud-config-monitor')
+    compile("org.springframework.cloud:spring-cloud-starter-eureka")
 
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 
 }
 
