--- a/config-server/build.gradle
+++ b/config-server/build.gradle
@@ -1,20 +1,3 @@
-//group 'net.supersun.msa.demo'
-//version 'noah-1.0'
-//
-//apply plugin: 'java'
-//
-//sourceCompatibility = 1.5
-//
-//repositories {
-//    mavenCentral()
-//}
-//
-//dependencies {
-//    testCompile group: 'junit', name: 'junit', version: '4.11'
-//}
-//
-//
-
 apply plugin: 'spring-boot'
 
 jar {
@@ -30,20 +13,12 @@ dependencyManagement {
 }
 
 dependencies {
-//    compile("org.springframework.boot:spring-boot-starter")
-//    compile("org.springframework.boot:spring-boot-starter-actuator") {
-//        exclude module: "spring-boot-starter-logging"
-//    }
-//    compile('org.springframework.boot:spring-boot-starter-web')
-//
-//    compile 'org.springframework.cloud:spring-cloud-config-server'
-
-
-    compile('org.springframework.boot:spring-boot-starter-actuator')
+   compile('org.springframework.boot:spring-boot-starter-actuator')
 //    compile('org.springframework.cloud:spring-cloud-starter-bus-amqp')
     compile('org.springframework.cloud:spring-cloud-config-server')
 //    compile('org.springframework.cloud:spring-cloud-config-monitor')
     compile("org.springframework.cloud:spring-cloud-starter-eureka")
+    compile("org.springframework.cloud:spring-cloud-starter-ribbon")
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 
