--- a/discovery-server/build.gradle
+++ b/discovery-server/build.gradle
@@ -25,6 +25,8 @@ dependencyManagement {
     imports {
         mavenBom 'org.springframework.cloud:spring-cloud-netflix:1.0.7.RELEASE'
         mavenBom 'io.spring.platform:platform-bom:2.0.3.RELEASE'
+//        mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Brixton.M3"
+
     }
 }
 
