--- a/discovery-server/src/main/resources/bootstrap.yml
+++ b/discovery-server/src/main/resources/bootstrap.yml
@@ -2,6 +2,9 @@ spring:
   application:
     name: discovery-service
 #  cloud:
+#      config:
+#        uri: ${vcap.services.${PREFIX:}configserver.credentials.uri:https://user:password@localhost:8888}
+#  cloud:
 #    config:
 #      failFast: true
 #      retry:
@@ -12,10 +15,11 @@ spring:
 #      discovery:
 #        serviceId: config-server
 #        enabled: false
-#      uri: http://localhost:8888
+##      uri: http://localhost:8888
+#      uri: ${vcap.services.${PREFIX:}configserver.credentials.uri:https://user:password@localhost:8888}
 #
-##eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
-#
+#eureka.client.serviceUrl.defaultZone: https://localhost:8761/eureka/
+
 #---
 ## For deployment in Docker containers
 #spring:
