--- a/z-dummy-api-alpha/build.gradle
+++ b/z-dummy-api-alpha/build.gradle
@@ -6,18 +6,47 @@ jar {
 
 dependencyManagement {
     imports {
+//        mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Angel.SR6"
+        mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Brixton.M3"
+
         mavenBom 'org.springframework.cloud:spring-cloud-netflix:1.0.7.RELEASE'
         mavenBom 'io.spring.platform:platform-bom:2.0.3.RELEASE'
     }
 }
 
-dependencies {
+//dependencies {
+//
+//    compile("org.springframework.boot:spring-boot-starter")
+//    compile("org.springframework.boot:spring-boot-starter-actuator")
+//
+//    compile 'org.springframework.cloud:spring-cloud-starter-eureka'
+//
+//}
 
-    compile("org.springframework.boot:spring-boot-starter")
+dependencies {
+    compile("org.springframework.boot:spring-boot-starter-web") {
+        //exclude module: 'spring-boot-starter-tomcat'
+    }
+    //compile("org.springframework.boot:spring-boot-starter-websocket")
+    //compile("org.springframework.boot:spring-boot-starter-undertow")
     compile("org.springframework.boot:spring-boot-starter-actuator")
 
-    compile 'org.springframework.cloud:spring-cloud-starter-eureka'
+    compile("org.springframework.cloud:spring-cloud-starter-hystrix")
+    compile("org.springframework.cloud:spring-cloud-starter-eureka")
+    compile("org.springframework.cloud:spring-cloud-starter-config")
+    //compile("org.springframework.cloud:spring-cloud-starter-bus-amqp")
+    compile("org.springframework.cloud:spring-cloud-starter-oauth2")
+    compile("org.springframework.cloud:spring-cloud-starter-security")
 
+    //compile("org.springframework.cloud:spring-cloud-netflix-hystrix-amqp:1.1.0.M4")
+
+//    compile("org.springframework.cloud:spring-cloud-starter-ribbon")
+
+
+    compile("org.apache.httpcomponents:httpclient:4.2.1")
+    compile("org.apache.httpcomponents:fluent-hc:4.2.1")
+
+    testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
 springBoot {
