**M2  for HTTPS W/O  CONFIG-SERVER AND LOAD BALANCING FROM COMPOSITE  TO OTHER API'S**

--- a/edge-server/src/main/resources/application.yml
+++ b/edge-server/src/main/resources/application.yml
@@ -10,6 +10,10 @@ server:
       key-store-password: password
       key-password: password
 
+#      clientAuth: want
+      trust-store: classpath:iyeke.jks
+
+
 
 info:
   component: Edge Server
