--- a/z-dummy-api-alpha/src/main/resources/application.yml
+++ b/z-dummy-api-alpha/src/main/resources/application.yml
@@ -9,6 +9,8 @@ server:
       key-store: classpath:iyeke.jks
       key-store-password: password
       key-password: password
+#      clientAuth: want
+      trust-store: classpath:iyeke.jks
 
 
 info:
@@ -63,6 +65,11 @@ ribbon:
 
 eureka:
   instance:
+    nonSecurePortEnabled: false
+    securePortEnabled: true
+    securePort: ${server.port}
+    homePageUrl: https://${eureka.instance.hostname}:${server.port}/
+
     leaseRenewalIntervalInSeconds: 3
 #    preferIpAddress: true
     secureVirtualHostName: ${spring.application.name}
